tests/test-dirs/upstream-typing-recovery/original-tests/not_an_object.compilers.reference
File "not_an_object.ml", line 1:
Error: Multiple errors were encountered
File "not_an_object.ml", line 11, characters 10-11:
11 |   let r = x # foo in
               ^
  This expression is not an object; it has type int
File "not_an_object.ml", line 18, characters 10-11:
18 |   let r = x # foo
               ^
  This expression is not an object; it has type int
File "not_an_object.ml", line 22, characters 17-19:
22 | let r : string = 10
                      ^^
  The constant 10 has type int but an expression was expected of type string
